# ai-lab

./: .gitignore  App.py  README.md  app.py  create_db.py  environment.yml  requirements.txt  stream.py  streaml.py  test.py
agents/: agents.py  chat_agent.py  orchestrator.py
backend/: api.py  config.py  db_utils.py  models.py
examples/train_model/: run.py  sweep.py
examples/train_toy/: requirements.txt  run.py
libs/: pyproject.toml
libs/lab_logger/: __init__.py  core.py
libs/lab_logger/lab_logger/: core.py
logs/: test_agent_sample_output.txt
manifests_old/: manifests.db
mocks/: mock_backend.py
rag_retriever/: retrieval.py
scripts/: bootstrap.sh  check_runs.py  inspect_artifacts.py  test_agent.py
servers/: ollama_server.py
tools/: langchain_tools.py
ui/: index.html  package-lock.json  package.json  streaml.py
ui/src/: App.jsx  index.css
ui/src/api/: runs.js
ui/src/components/: ArtifactPreview.jsx  Chatbox.jsx  CompareChart.jsx  FlagButton.jsx
ui/src/hooks/: useChat.js
ui/src/pages/: AssistantPage.jsx  CompareRuns.jsx  RunDetail.jsx  RunsList.jsx
ui/src/utils/: exportUtils.js
